--- a/index.html
+++ b/index.html
@@ -17,23 +17,31 @@
 				<div class="logo"><img src="img/Logo.png" alt="logo"></div>
 				<div class="nav">
 					<ul class="nav-menu">
-						<li class="nav-menu-item upcase"><a href="#features">Home</a></li>
-						<li class="nav-menu-item upcase"><a href="#about-us">About</a></li>
-						<li class="nav-menu-item upcase"><a href="#about-us">Skills</a></li>
+						<li class="nav-menu-item upcase"><a href="#home">Home</a></li>
+						<li class="nav-menu-item upcase history"><a href="#about-us">About</a></li>
+						<li class="nav-menu-item upcase skills"><a href="#about-us">Skills</a></li>
 						<li class="nav-menu-item upcase"><a href="#services">service</a></li>
 						<li class="nav-menu-item upcase"><a href="#our-work">work</a></li>
 						<li class="nav-menu-item upcase"><a href="#testimonials">testimonial</a></li>
 						<li class="nav-menu-item upcase"><a href="#news">blog</a></li>
 						<li class="nav-menu-item upcase"><a href="#our-team">team</a></li>
-						<li class="nav-menu-item upcase"><a href="#footer">contact</a></li>
-						<li class="nav-menu-item upcase">
+						<li class="nav-menu-item upcase"><a href="#keep-in-touch">contact</a></li>
+						<li class="nav-menu-item upcase search">
 							<i class="fa fa-search" aria-hidden="true"></i>
 						</li>
 					</ul>
+					<form class="search-form">
+						<div class="search-block">
+							<input type="text" placeholder="Type and search...">
+							<button type="submit" class="text-center">
+								<i class="fa fa-search" aria-hidden="true"></i>
+							</button>
+						</div>
+					</form>
 				</div>
 			</div>
 		</div>
-		<div class="container-fluid">
+		<div class="container-fluid" id="home">
 			<h2 class="page-suptitle upcase text-center">the ham is <span class="green">wordpress theme</span></h2>
 			<h1 class="page-title upcase text-center">We are creative</h1>
 			<h2 class="page-subtitle caps text-center">just buy and enjoy these awesome featurea</h2>
@@ -193,15 +201,40 @@
 							<li data-tab="3" class="menu-item upcase active"><a href="#">our skills</a></li>
 						</ul>
 						<div class="tabs-content">
-							<div class="tab-content history" data-tab="1">
-								OUR HISTORY
-								<br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut suscipit fugiat laudantium vero earum perferendis necessitatibus in incidunt nemo odio similique eos a, cumque, accusamus et aliquam vitae perspiciatis asperiores!
+							<div class="tab-content history" id="history" data-tab="1">
+								<p class="text">
+									Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incid idunt ut labore et dolore magna aliqua.
+									<br>
+									Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+								</p>
+								<div class="list">
+									<div class="left">
+										<ul>
+											<li>Excepteur sint occaecat sint.</li>
+											<li>Excepteur sint occaecat sint.</li>
+											<li>Excepteur sint occaecat sint.</li>
+											<li>Excepteur sint occaecat sint.</li>
+										</ul>
+									</div>
+									<div class="right">
+										<ul>
+											<li>Excepteur sint occaecat sint.</li>
+											<li>Excepteur sint occaecat sint.</li>
+											<li>Excepteur sint occaecat sint.</li>
+											<li>Excepteur sint occaecat sint.</li>
+										</ul>
+									</div>
+								</div>
 							</div>
 							<div class="tab-content biography" data-tab="2">
-								OUR BIOGRAPHY
-								<br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut suscipit fugiat laudantium vero earum perferendis necessitatibus in incidunt nemo odio similique eos a, cumque, accusamus et aliquam vitae perspiciatis asperiores!
+								<p class="text">
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nec odio ipsum Suspendisse cursus malesuada facilisis. Nunc con sectetur odio sed dolor tincidunt porttitor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibu lum nec odio ipsum. Sus pendisse cursus malesua da facilisis. Vestibulum nec odio ipsum.
+									<br>
+									<br>
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nec odio ipsum Suspendisse cursus malesuada facilisis. Nunc con sectetur odio sed dolor tincidunt porttitor. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+								</p>
 							</div>
-							<div class="bars tab-content active" data-tab="3">
+							<div class="bars tab-content active" id="skills" data-tab="3">
 								<div class="bar upcase">
 									<div class="progress ui">user interface</div>
 								</div>
