add animate scroll to section by click on the link in the header

--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
 				<div class="logo"><img src="img/Logo.png" alt="logo"></div>
 				<div class="nav">
 					<ul class="nav-menu">
-						<li class="nav-menu-item upcase"><a href="#home">Home</a></li>
-						<li class="nav-menu-item upcase history"><a href="#about-us">About</a></li>
-						<li class="nav-menu-item upcase skills"><a href="#about-us">Skills</a></li>
-						<li class="nav-menu-item upcase"><a href="#services">service</a></li>
-						<li class="nav-menu-item upcase"><a href="#our-work">work</a></li>
-						<li class="nav-menu-item upcase"><a href="#testimonials">testimonial</a></li>
-						<li class="nav-menu-item upcase"><a href="#news">blog</a></li>
-						<li class="nav-menu-item upcase"><a href="#our-team">team</a></li>
-						<li class="nav-menu-item upcase"><a href="#keep-in-touch">contact</a></li>
+						<li class="nav-menu-item upcase"><a class="head-link" href="#home">Home</a></li>
+						<li class="nav-menu-item upcase history"><a class="head-link" href="#about-us">About</a></li>
+						<li class="nav-menu-item upcase skills"><a class="head-link" href="#about-us">Skills</a></li>
+						<li class="nav-menu-item upcase"><a class="head-link" href="#services">service</a></li>
+						<li class="nav-menu-item upcase"><a class="head-link" href="#our-work">work</a></li>
+						<li class="nav-menu-item upcase"><a class="head-link" href="#testimonials">testimonial</a></li>
+						<li class="nav-menu-item upcase"><a class="head-link" href="#news">blog</a></li>
+						<li class="nav-menu-item upcase"><a class="head-link" href="#our-team">team</a></li>
+						<li class="nav-menu-item upcase"><a class="head-link" href="#keep-in-touch">contact</a></li>
 						<li class="nav-menu-item upcase search">
 							<i class="fa fa-search" aria-hidden="true"></i>
 						</li>
@@ -66,7 +66,6 @@
 	</header>
 	<main>
 		<section id="blocks">
-			<!-- Different theme option-fully customizable-unlimited support-responsive all device-->
 			<div class="blocks">
 				<div class="blocks__block blocks__block1">
 					<a href="#" class="blocks__block1__a">
@@ -111,7 +110,6 @@
 			</div>
 		</section>
 		<section id="features" class="features">
-			<!-- Creative Amazing Features-->
 			<h2 class="features__title caps text-center">creative amazing features</h2>
 			<div class="lines"></div>
 			<div class="container">
@@ -185,7 +183,6 @@
 					</div>
 				</div>
 			</div>
-
 		</section>
 		<section id="about-us" class="about-us">
 			<div class="img"><img src="img/about-img.png" alt=""></div>
@@ -196,12 +193,12 @@
 						<h2 class="caps">about our company</h2>
 						<div class="lines"></div>
 						<ul class="menu">
-							<li data-tab="1" class="menu-item upcase"><a href="#">our history</a></li>
+							<li data-tab="1" class="menu-item upcase active"><a href="#">our history</a></li>
 							<li data-tab="2" class="menu-item upcase"><a href="#">our biography</a></li>
-							<li data-tab="3" class="menu-item upcase active"><a href="#">our skills</a></li>
+							<li data-tab="3" class="menu-item upcase"><a href="#">our skills</a></li>
 						</ul>
 						<div class="tabs-content">
-							<div class="tab-content history" id="history" data-tab="1">
+							<div class="tab-content history active" id="history" data-tab="1">
 								<p class="text">
 									Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incid idunt ut labore et dolore magna aliqua.
 									<br>
@@ -234,7 +231,7 @@
 									Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nec odio ipsum Suspendisse cursus malesuada facilisis. Nunc con sectetur odio sed dolor tincidunt porttitor. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 								</p>
 							</div>
-							<div class="bars tab-content active" id="skills" data-tab="3">
+							<div class="bars tab-content" id="skills" data-tab="3">
 								<div class="bar upcase">
 									<div class="progress ui">user interface</div>
 								</div>
@@ -257,7 +254,6 @@
 			</div>
 		</section>
 		<section id="our-work" class="our-work">
-			<!-- Our Amazing Work-->
 			<div class="container">
 				<h1 class="ow-title">Our amazing work</h1>
 				<div class="lines"></div>
@@ -386,7 +382,6 @@
 			</div>
 		</section>
 		<section id="services" class="services">
-			<!-- Our Services-->
 			<h2 class="title caps text-center">our services</h2>
 			<div class="lines"></div>
 			<div class="container">
@@ -521,7 +516,6 @@
 		</section>
 		<section id="purchase" class="purchase">
 			<div class="container-fluid">
-			<!-- Everything is ready. just buy and install now-->
 			<h1 class="title upcase text-center">Everything is ready. just buy and install now</h1>
 			<h3 class="subtitle text-center">Smooth reliable, responsive ready, perfect portfolio, unique blog layout and many many options for you</h3>
 			<div class="btn text-center">
@@ -640,10 +634,8 @@
 					</div>
 				</div>
 			</div>
-
 		</section>
 		<section id="blocks-2">
-			<!-- Works-Customers-Purchase-Office-->
 			<div class="blocks-2">
 				<div class="blocks-2__block blocks-2__block1">
 					<a href="#">
@@ -692,7 +684,6 @@
 			</div>
 		</section>
 		<section id="pricing" class="pricing">
-			<!-- Our Pricing Table-->
 			<h1 class="block-title caps text-center">our pricing table</h1>
 			<div class="lines"></div>
 			<div class="container">
@@ -769,7 +760,6 @@
 		</section>
 		<section id="testimonials" class="testimonials">
 			<div class="container-fluid">
-				<!-- What People Say About theHam-->
 				<h1 class="block-title text-center">What People Say About theHam</h1>
 				<div class="lines"></div>
 				<div class="container">
@@ -829,10 +819,6 @@
 										<li data-tab="4" class="avatars-item"><img src="img/avatar-4.jpg" alt=""></li>
 									</ul>
 									<button class="tab-next text-center active"><i class="fa fa-angle-right" aria-hidden="true"></i></button>
-									<!-- <div class="btns">
-										<button class="tab-prev text-center"><i class="fa fa-angle-left" aria-hidden="true"></i></button>
-										<button class="tab-next text-center active"><i class="fa fa-angle-right" aria-hidden="true"></i></button>
-									</div> -->
 								</div>
 							</div>
 						</div>
@@ -841,7 +827,6 @@
 			</div>
 		</section>
 		<section id="our-team" class="our-team">
-			<!-- Meet Our Team-->
 			<h1 class="block-title caps text-center">meet our team</h1>
 			<div class="lines"></div>
 			<div class="container">
@@ -931,7 +916,6 @@
 		</section>
 		<section id="clean-design" class="clean-design">
 			<div class="container-fluid">
-				<!-- theham is not only wordpress theme-->
 				<h1 class="block-title upcase text-center">
 					theham is not only wordpress theme
 					<br>
@@ -959,7 +943,6 @@
 			</div>
 		</section>
 		<section id="keep-in-touch" class="keep-in-touch">
-			<!-- Keep In Touch-->
 			<div class="row">
 				<div class="col-6">
 					<div id="map"></div>
